# eot_tools

./: .flake8  .readthedocs.yaml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
eot_tools/: __init__.py  eot.py
tests/: __init__.py  test_eot.py
tests/files/: Maki.eot.ABOUT  Maki.ttf.ABOUT
