# Copyright (c) stefan6419846. All rights reserved.
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "eot_tools"
description = "Tools for working with EOT (Embedded OpenType) font files"
version = "0.1.0"
license = "MIT"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "stefan6419846"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Text Processing :: Fonts",
    "Topic :: Utilities",
    "Typing :: Typed",
]
keywords = [
    "eot",
    "font",
]
requires-python = ">=3.9, <4"
dependencies = [
]

[project.urls]
Homepage = "https://github.com/stefan6419846/eot_tools"
# Documentation = "https://eot-tools.readthedocs.io/"
Repository = "https://github.com/stefan6419846/eot_tools"
Issues = "https://github.com/stefan6419846/eot_tools/issues"
Changelog = "https://github.com/stefan6419846/eot_tools/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "codespell",
    "coverage",
    "flake8",
    "flake8-bugbear",
    "pep8-naming",
    "mypy",
    "fonttools",
]
#docs = [
#    "sphinx",
#    "furo",
#]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = [
    "eot_tools",
    "eot_tools.*"
]
namespaces = false

[tool.codespell]
check-hidden = true
skip = "./.git*,./.mypy_cache/*,./venv*"

[tool.coverage.run]
branch = true
# parallel = true
source = [
    "eot_tools",
]

[tool.mypy]
strict = true
files = "eot_tools,tests"
exclude = [
]
